--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ a,
 ul, ol 	{ margin:0; padding:0; margin-bottom: 20px; }
 ul { list-style-type:circle; }
 ol { list-style: decimal; }
-li	{  list-style-position:inside; }
+li	{  list-style-position:outside; }
 
 /* Line Height */
 #post-body, p { line-height:1.7; }
@@ -684,7 +684,7 @@ li {
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
 	list-style-type: disc;
-	list-style-position: inside;
+	list-style-position: outside;
 }
 
 ul > li > ul > li {
