update email with mailchimp kaichaosun/blog@ac9b4a5b625117bf6023fac251501fb2b5215a66

--- a/css/style.css
+++ b/css/style.css
@@ -713,3 +713,12 @@ ul > li > ul > li > ul > li {
 	padding-top: 15px;
 	padding-bottom: 5px;
 }
+
+#mc_embed_signup {
+    margin-top: 80px;
+    margin-bottom: 40px;
+}
+
+#mc-embedded-subscribe {
+    background-color: #5badf0 !important;
+}
