--- a/css/style.css
+++ b/css/style.css
@@ -713,3 +713,18 @@ ul > li > ul > li > ul > li {
 	padding-top: 15px;
 	padding-bottom: 5px;
 }
+
+.taxonomies ul li {
+	display: inline;
+	margin: 0 20px 0 20px;
+}
+
+.taxonomies ul li a:hover {
+	background-color: yellow;
+}
+
+.taxonomies {
+	margin-bottom: 60px;
+	text-align: center;
+	font-size: 20px;
+}
